--- a/src/Styles/Pages/_Questions.scss
+++ b/src/Styles/Pages/_Questions.scss
@@ -20,6 +20,8 @@
     }
     &__option {
       width: 50rem;
+      font-family: "Source Code Pro", monospace;
+
       border: solid 0.5px $text-color;
       border-radius: 5px;
       margin-bottom: 1.5rem;
@@ -29,4 +31,17 @@
       }
     }
   }
+}
+
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 500ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
 }
