--- a/src/Styles/main.scss
+++ b/src/Styles/main.scss
@@ -2,4 +2,5 @@
 @import "./base";
 @import "./Pages/Home";
 @import "./Pages/Questions";
+@import "./Pages/Results";
 @import "./Components/IconAnswer";
