--- a/src/Styles/main.scss
+++ b/src/Styles/main.scss
@@ -3,5 +3,6 @@
 @import "./Pages/Home";
 @import "./Pages/Questions";
 @import "./Pages/Results";
+@import "./Pages/Ranks";
 @import "./Components/IconAnswer";
 @import "./Components/AnswerModal";
