--- a/src/Styles/Pages/_Home.scss
+++ b/src/Styles/Pages/_Home.scss
@@ -12,7 +12,8 @@
   &__quizes {
     margin-top: 4rem;
     &__quiz {
-      width: 25rem;
+      font-size: 1.6rem;
+      width: 40rem;
       display: flex;
       padding: 1.2rem 2.5rem;
       padding-right: 1rem;
