--- a/src/Styles/Pages/_Home.scss
+++ b/src/Styles/Pages/_Home.scss
@@ -2,11 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 5rem;
+  margin-top: 6rem;
 
   .title {
     font-size: 2rem;
     text-align: center;
+    font-weight: 700;
+
+    max-width: 50%;
   }
 
   &__quizes {
