--- a/src/Styles/_base.scss
+++ b/src/Styles/_base.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;1,300&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@700&display=swap");
 * {
   box-sizing: border-box;
 }
