--- a/src/Styles/Pages/_Ranks.scss
+++ b/src/Styles/Pages/_Ranks.scss
@@ -4,19 +4,24 @@
   flex-direction: column;
   align-items: center;
   font-size: 1.6rem;
+  margin-top: 2rem;
+  &__title {
+    padding: 0 5rem;
+  }
 
   &__table {
     margin-top: 3rem;
-    border-radius: 10px;
     box-shadow: 0 0 5px 5px rgba(148, 146, 146, 0.5);
     display: flex;
     flex-direction: column;
-    width: 12rem;
-    padding: 0rem 1rem;
-
+    width: 40rem;
+    font-size: 2rem;
+    border-radius: 10px;
+    overflow: hidden;
     &__row {
       display: flex;
       justify-content: space-between;
+      padding: 1rem 2rem;
       p {
         margin: 0;
       }
