--- a/src/Styles/Pages/_Ranks.scss
+++ b/src/Styles/Pages/_Ranks.scss
@@ -15,16 +15,40 @@
     display: flex;
     flex-direction: column;
     width: 40rem;
-    font-size: 2rem;
+    font-size: 1.6rem;
     border-radius: 10px;
     overflow: hidden;
+
+    &:hover {
+      overflow: visible;
+    }
     &__row {
+      cursor: pointer;
+
       display: flex;
       justify-content: space-between;
       padding: 1rem 2rem;
+      transition: all 0.2s ease-in-out;
+      &:hover {
+        transform: scale(1.1);
+      }
       p {
         margin: 0;
       }
+    }
+  }
+
+  .back-to-main {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: $text-color;
+    border: 1px solid $text-color;
+    padding: 1rem 1.5rem;
+    border-radius: 8px;
+    margin-top: 2rem;
+    &:hover {
+      background-color: $bg-color;
     }
   }
 }
