--- a/src/Styles/Pages/_Home.scss
+++ b/src/Styles/Pages/_Home.scss
@@ -5,10 +5,19 @@
   margin-top: 4rem;
 
   .title {
-    font-size: 2rem;
+    font-size: 1.6rem;
     text-align: center;
     font-weight: 700;
     max-width: 50%;
+
+    @media only screen and (max-width: 900px) {
+      font-size: 1.5rem;
+      max-width: 80%;
+    }
+    @media only screen and (max-width: 600px) {
+      font-size: 1.5rem;
+      max-width: 90%;
+    }
   }
 
   &__quizes {
@@ -25,6 +34,11 @@
       border-radius: 10px;
       margin-bottom: 2rem;
       cursor: pointer;
+
+      @media only screen and (max-width: 600px) {
+        width: 100%;
+      }
+
       &:hover {
         background-color: rgba(29, 26, 26, 0.784);
       }
