--- a/src/Styles/Pages/_Ranks.scss
+++ b/src/Styles/Pages/_Ranks.scss
@@ -18,6 +18,9 @@
     font-size: 1.6rem;
     border-radius: 10px;
     overflow: hidden;
+    @media only screen and (max-width: 600px) {
+      width: 90%;
+    }
 
     &:hover {
       overflow: visible;
