--- a/src/Styles/_base.scss
+++ b/src/Styles/_base.scss
@@ -6,6 +6,10 @@
 html {
   font-size: 62.5%;
   overflow: hidden;
+
+  @media only screen and (max-width: 600px) {
+    font-size: 50%;
+  }
 }
 
 body {
