--- a/src/Styles/Components/_Loading.scss
+++ b/src/Styles/Components/_Loading.scss
@@ -9,10 +9,10 @@
   font-size: 10px;
   position: relative;
   text-indent: -9999em;
-  border-top: 1.1em solid $bg-color;
+  border-top: 1.1em solid rgba(255, 255, 255, 0.2) r;
   border-right: 1.1em solid rgba(255, 255, 255, 0.2);
   border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-left: 1.1em solid #ffffff;
+  border-left: 1.1em solid rgba(255, 255, 255, 0.2);
   transform: translateZ(0);
   animation: load8 1.1s infinite linear;
 }
